<resources>
    <string name="app_name">Google_Registration</string>
    <string name="signup">SignUp</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">Register</string>
    <string name="google">Google</string>
    <string name="microsoft">microsoft</string>
    <string name="facebook">facebook</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="welcome_message">Welcome to the App!</string>
    <string name="additional_info">Additional Information</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="continue_text">Continue</string>
</resources>